force-app/main/default/objects/oao__Business_Type_Party_Configuration__mdt/oao__Business_Type_Party_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Business Type Party Configuration</label>
    <pluralLabel>Business Type Party Configurations</pluralLabel>
</CustomObject>