force-app/main/default/objects/oao__Business_Type_Party_Configuration__mdt/fields/oao__Add_party_page_title__c.field-meta.xml
<CustomField>
    <fullName>oao__Add_party_page_title__c</fullName>
    <description>Contain the portal page title</description>
    <inlineHelpText>This field contains the title in additional business person page in portal. It can contain HTML tag as well, if any word or sentence need to be bold or any style change.</inlineHelpText>
    <label>Add party page title</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>