force-app/main/default/objects/oao__Business_Type_Party_Configuration__mdt/fields/oao__Authorized_Signer__c.field-meta.xml
<CustomField>
    <fullName>oao__Authorized_Signer__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is Deprecated</description>
    <label>Authorized Signer(Deprecated)</label>
    <type>Checkbox</type>
</CustomField>