force-app/main/default/objects/oao__Business_Type_Party_Configuration__mdt/fields/oao__Beneficial_Owner__c.field-meta.xml
<CustomField>
    <fullName>oao__Beneficial_Owner__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox for beneficial owner</description>
    <label>Beneficial Owner</label>
    <type>Checkbox</type>
</CustomField>