force-app/main/default/objects/oao__Business_Type_Party_Configuration__mdt/fields/oao__Business_Category__c.field-meta.xml
<CustomField>
    <fullName>oao__Business_Category__c</fullName>
    <description>Contain List of Business Category</description>
    <label>Business Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LLC</fullName>
                <default>true</default>
                <label>LLC</label>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>