force-app/main/default/objects/oao__Business_Type_Party_Configuration__mdt/fields/oao__Business_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>oao__Business_Sub_Category__c</fullName>
    <description>Contain List of business sub category</description>
    <label>Business Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S Corporation</fullName>
                <default>true</default>
                <label>S Corporation</label>
            </value>
            <value>
                <fullName>C Corporation</fullName>
            </value>
            <value>
                <fullName>Non-profit Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Non-profit</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>General Partnership</fullName>
            </value>
            <value>
                <fullName>Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Limited Liability Corporation</fullName>
            </value>
            <value>
                <fullName>Professional Limited Liability Corporation</fullName>
            </value>
            <value>
                <fullName>For Profit Corporation</fullName>
            </value>
            <value>
                <fullName>Sole Owned For Profit Corporation</fullName>
            </value>
            <value>
                <fullName>Nonprofit Corporation</fullName>
            </value>
            <value>
                <fullName>Nonprofit Association / Organization</fullName>
            </value>
            <value>
                <fullName>Nonprofit or Association (Group or Club)</fullName>
            </value>
            <value>
                <fullName>Nonprofit Organization</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organization</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership (LLP)</fullName>
            </value>
            <value>
                <fullName>Non-Profit Business</fullName>
            </value>
            <value>
                <fullName>Non-for-Profit Association</fullName>
            </value>
            <value>
                <fullName>Non-for-Profit Club</fullName>
            </value>
            <value>
                <fullName>Limited Partnership (LP)</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>State/Pol Subdv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>