force-app/main/default/objects/oao__Business_Type_Party_Configuration__mdt/fields/oao__Control_Person__c.field-meta.xml
<CustomField>
    <fullName>oao__Control_Person__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox for control person</description>
    <label>Control Person</label>
    <type>Checkbox</type>
</CustomField>