force-app/main/default/objects/oao__Business_Type_Party_Configuration__mdt/fields/oao__Custom_Business_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>oao__Custom_Business_Sub_Category__c</fullName>
    <description>Enter business sub category here if it is not listed in Business Sub Category picklist.</description>
    <inlineHelpText>Enter business sub category here if it is not listed in Business Sub Category picklist.</inlineHelpText>
    <label>Custom Business Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>